--- a/src/content/l10n/sv/alt.json
+++ b/src/content/l10n/sv/alt.json
@@ -1,3 +1,5 @@
 {
-  "location": "Restaurangens plats på en karta."
+  "map": "Restaurangens plats på en karta.",
+  "food": "En ångkokt dumpling plockas upp med pinnar.",
+  "drinks": "Ett glas bubbelte med sugrör."
 }
