--- a/src/content/l10n/en/categories/drinks.csv
+++ b/src/content/l10n/en/categories/drinks.csv
@@ -1,3 +1,8 @@
 slug,name,description
-a,a,a
-
+"lask","Beverages","33 cl cans."
+"varmt","Warm beverages",
+"boba","Bubble tea",
+"vittVin","White wine",
+"rottVin","Red wine",
+"ol","Beer",
+"alkohol","Miscellaneous alcoholic beverages",
