--- a/src/content/l10n/sv/allergens.json
+++ b/src/content/l10n/sv/allergens.json
@@ -1,9 +1,17 @@
 {
+  "fisk": "fisk",
+  "gluten": "gluten",
   "jordnötter": "jordnötter",
+  "lax": "lax",
+  "mjölk": "mjölk",
   "nötter": "nötter",
   "ostronsås": "ostronsås",
+  "räkor": "räkor",
   "sesamfrön": "sesamfrön",
+  "sesamolja": "sesamolja",
+  "lök": "lök",
   "soja": "soja",
+  "sojaböna": "sojaböna",
   "sojabönor": "sojabönor",
   "vete": "vete",
   "vetemjöl": "vetemjöl",
