--- a/src/content/l10n/en/categories/food.csv
+++ b/src/content/l10n/en/categories/food.csv
@@ -1,2 +1,5 @@
 slug,name,description
-a,a,a
+"sides","Sides",
+"varm","Main courses",
+"sushi","Sushi",
+"hotpot","Hot pot","A collective culinary tradition from China! Hot pot must be ordered one day in advance to give us time to prepare the meal."
