--- a/src/content/l10n/sv/ui.json
+++ b/src/content/l10n/sv/ui.json
@@ -1,7 +1,10 @@
 {
   "nav.order": "Beställ",
+  "nav.orderTooltip": "Beställ via Qopla",
   "nav.locate": "Hitta hit",
   "nav.showOnMaps": "Visa på Google Maps",
+  "nav.closed": "Vi kan inte ta emot beställningar ännu. Kom gärna tillbaka senare!",
+
   "lang.sv": "Visa sidan på svenska",
   "lang.en": "Visa sidan på engelska",
 
