Add countdown finale

--- a/src/content/l10n/en/ui.json
+++ b/src/content/l10n/en/ui.json
@@ -4,6 +4,7 @@
   "nav.locate": "Find us",
   "nav.showOnMaps": "Show on Google Maps",
   "nav.closed": "We cannot accept orders yet. Please come back later!",
+  "nav.opened": "We have opened!",
 
   "lang.sv": "Show page in Swedish",
   "lang.en": "Show page in English",
