--- a/src/content/l10n/sv/ui.json
+++ b/src/content/l10n/sv/ui.json
@@ -4,6 +4,7 @@
   "nav.locate": "Hitta hit",
   "nav.showOnMaps": "Visa på Google Maps",
   "nav.closed": "Vi kan inte ta emot beställningar ännu. Kom gärna tillbaka senare!",
+  "nav.opened": "Vi har öppnat!",
 
   "lang.sv": "Visa sidan på svenska",
   "lang.en": "Visa sidan på engelska",
