--- a/src/content/l10n/en/categories/drinks.csv
+++ b/src/content/l10n/en/categories/drinks.csv
@@ -1,5 +1,5 @@
-slug,name,description
-"lask","Beverages","33 cl cans."
+"slug","name","description"
+"lask","Beverages",
 "varmt","Warm beverages",
 "boba","Bubble tea",
 "vittVin","White wine",
