--- a/src/content/l10n/en/products/food.csv
+++ b/src/content/l10n/en/products/food.csv
@@ -1,4 +1,4 @@
-slug,name,description
+"slug","name","description"
 "karaage","Karaage","Crispy fried chicken. Served with rice, fried rice, or fried noodles and our hot white cabbage salad, chili mayonnaise, and sweet chili dip."
 "apelsinkyckling","Orange chicken","Fried chicken pieces in orange sauce. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
 "kycklingwok","Chicken wok","Chicken wok with cashew nuts and vegetables. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
@@ -12,7 +12,9 @@ slug,name,description
 "stektarakor","Fried shrimp","Large shrimp wok with fresh chili, garlic, and bean sprouts in Sichuan sauce. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
 "nudelsoppa","Noodle soup","Fresh noodles with slow cooked beef shank and chinese soymarinated egg. Served with our hot white cabbage salad."
 "sichuannudlar","Sichuan noodles","Fresh noodles with minced beef, Sichuan pepper, and vegetables. Served with our hot white cabbage salad."
-
+"yakiniku","Yakiniku","Japanese dish. Grilled beef with vegetables. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
+"gongbaokyckling","Gong Bao Chicken","Hot chicken dish from Sichuan with peanuts. Sweet-sour flavour and hot sauce with vegetables. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
+,,
 "hutun","Hutung Tang","Soup made from chicken broth with five wontons, seaweed, and mini shrimps."
 "varrullar","Vegetarian spring rolls","Four fried spring rolls. Served with chili sauce or soy sauce."
 "cheese","Cheddar cheese","Four fried cheese nuggest with jalapeño flavour. Served with sweet chili sauce or soy sauce."
@@ -24,7 +26,7 @@ slug,name,description
 "stektanudlar","Fried noodles","Fried noodles with carrot, cabbage, and leek."
 "bonor","Edamame beans","Steam cooked edamame beans. Served with soy sauce."
 "vitkalssallad","White cabbage salad","Our hot, home made white cabbage salad."
-
+,,
 "sushiliten","Small sushi","9 pieces. 3 California rolls, 2 salmon rolls, 2 shrimp rolls, 1 avocado roll, and 1 grilled salmon roll. Served with soy, pickled ginger, seaweed salad, wasabi, and miso soup."
 "sushimellan","Medium sushi","12 pieces. 5 California rolls, 2 salmon rolls, 2 shrimp rolls, 2 avocado rolls, and 1 grilled salmon roll. Served with soy, pickled ginger, seaweed salad, wasabi, and miso soup."
 "sushistor","Large sushi","16 pieces. 7 California rolls, 3 salmon rolls, 2 shrimp rolls, 2 avocado rolls, and 2 grilled salmon rolls. Served with soy, pickled ginger, seaweed salad, wasabi, and miso soup."
