--- a/src/content/l10n/en/categories/drinks.csv
+++ b/src/content/l10n/en/categories/drinks.csv
@@ -2,7 +2,7 @@
 "lask","Beverages",
 "varmt","Warm beverages",
 "boba","Bubble tea",
-"vittVin","White wine",
-"rottVin","Red wine",
+"vittvin","White wine",
+"rottvin","Red wine",
 "ol","Beer",
 "alkohol","Miscellaneous alcoholic beverages",
