--- a/src/content/l10n/sv/alt.json
+++ b/src/content/l10n/sv/alt.json
@@ -1,5 +1,6 @@
 {
   "map": "Restaurangens plats på en karta.",
-  "food": "En ångkokt dumpling plockas upp med pinnar.",
-  "drinks": "Ett glas bubbelte med sugrör."
+  "hero": "En tallrik Pad Thai står på ett bord.",
+  "food": "En skål bibimbap.",
+  "drinks": "Ett glass cola."
 }
