--- a/src/content/l10n/sv/alt.json
+++ b/src/content/l10n/sv/alt.json
@@ -1,5 +1,5 @@
 {
-  "map": "Restaurangens plats på en karta.",
+  "map": "Restaurangens plats på Google maps.",
   "hero": "En tallrik Pad Thai står på ett bord.",
   "food": "En skål bibimbap.",
   "drinks": "Ett glass cola."
