--- a/src/content/l10n/en/products/food.csv
+++ b/src/content/l10n/en/products/food.csv
@@ -1,19 +1,19 @@
 "slug","name","description"
-"karaage","Karaage","Crispy fried chicken. Served with rice, fried rice, or fried noodles and our hot white cabbage salad, chili mayonnaise, and sweet chili dip."
-"apelsinkyckling","Orange chicken","Fried chicken pieces in orange sauce. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"kycklingwok","Chicken wok","Chicken wok with cashew nuts and vegetables. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"biffbambuskott","Beef wok","Beef wok with bambu shoots and leek. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"rodcurry","Red curry","Thai dish with red curry and coconut milk. Choose between chicken, beef, and shrimp. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"bibimbap","Bibimbap","Korean dish with rice, beef, and vegetables. Served with our hot white cabbage salad."
-"padthai","Pad thai","Fried rice noodles with egg, chopped peanuts and lime. Choose between chicken, beef, and shrimp. Served with our hot white cabbage salad."
-"pokebowl","Poké bowl","Sushi rice, kimchi, avocado, edamame beans, and mango. Served with our hot white cabbage salad."
-"wokadtouf","Tofu wok","Tofu wok with vegetables in chili bean sauce. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"sichuangryta","Sichuan stew","Hot, traditional stew from Sichuan with sweet potato noodles, sichuan pepper, and chili. Choose between chicken, beef, and shrimp. Served with our hot white cabbage salad."
-"stektarakor","Fried shrimp","Large shrimp wok with fresh chili, garlic, and bean sprouts in Sichuan sauce. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"nudelsoppa","Noodle soup","Fresh noodles with slow cooked beef shank and chinese soymarinated egg. Served with our hot white cabbage salad."
-"sichuannudlar","Sichuan noodles","Fresh noodles with minced beef, Sichuan pepper, and vegetables. Served with our hot white cabbage salad."
-"yakiniku","Yakiniku","Japanese dish. Grilled beef with vegetables. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
-"gongbaokyckling","Gong Bao Chicken","Hot chicken dish from Sichuan with peanuts. Sweet-sour flavour and hot sauce with vegetables. Served with rice, fried rice, or fried noodles and our hot white cabbage salad."
+"karaage","Karaage","Crispy fried chicken. Served with rice, fried rice, or fried noodles and our own red cabbage salad, chili mayonnaise, and sweet chili dip."
+"apelsinkyckling","Orange chicken","Fried chicken pieces in orange sauce. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"kycklingwok","Chicken wok","Chicken wok with cashew nuts and vegetables. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"biffbambuskott","Beef wok","Beef wok with bambu shoots and leek. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"rodcurry","Red curry","Thai dish with red curry and coconut milk. Choose between chicken, beef, and shrimp. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"bibimbap","Bibimbap","Korean dish with rice, beef, and vegetables. Served with our own red cabbage salad."
+"padthai","Pad thai","Fried rice noodles with egg, chopped peanuts and lime. Choose between chicken, beef, and shrimp. Served with our own red cabbage salad."
+"pokebowl","Poké bowl","Sushi rice, kimchi, avocado, edamame beans, and mango. Served with our own red cabbage salad."
+"wokadtouf","Tofu wok","Tofu wok with vegetables in chili bean sauce. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"sichuangryta","Sichuan stew","Hot, traditional stew from Sichuan with sweet potato noodles, sichuan pepper, and chili. Choose between chicken, beef, and shrimp. Served with our own red cabbage salad."
+"stektarakor","Fried shrimp","Large shrimp wok with fresh chili, garlic, and bean sprouts in Sichuan sauce. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"nudelsoppa","Noodle soup","Fresh noodles with slow cooked beef shank and chinese soymarinated egg. Served with our own red cabbage salad."
+"sichuannudlar","Sichuan noodles","Fresh noodles with minced beef, Sichuan pepper, and vegetables. Served with our own red cabbage salad."
+"yakiniku","Yakiniku","Japanese dish. Grilled beef with vegetables. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
+"gongbaokyckling","Gong Bao Chicken","Hot chicken dish from Sichuan with peanuts. Sweet-sour flavour and hot sauce with vegetables. Served with rice, fried rice, or fried noodles and our own red cabbage salad."
 ,,
 "hutun","Hutung Tang","Soup made from chicken broth with five wontons, seaweed, and mini shrimps."
 "varrullar","Vegetarian spring rolls","Four fried spring rolls. Served with chili sauce or soy sauce."
@@ -25,6 +25,7 @@
 "stektris","Fried rice","Fried rice with peas, carrot, and corn."
 "stektanudlar","Fried noodles","Fried noodles with carrot, cabbage, and leek."
 "bonor","Edamame beans","Steam cooked edamame beans. Served with soy sauce."
+"rodkalssallad","Red cabbage salad","Our home made red cabbage salad."
 "vitkalssallad","White cabbage salad","Our hot, home made white cabbage salad."
 ,,
 "sushiliten","Small sushi","9 pieces. 3 California rolls, 2 salmon rolls, 2 shrimp rolls, 1 avocado roll, and 1 grilled salmon roll. Served with soy, pickled ginger, seaweed salad, wasabi, and miso soup."
