Prepare for change of opening hours

--- a/src/content/l10n/sv/ui.json
+++ b/src/content/l10n/sv/ui.json
@@ -11,6 +11,7 @@
   "openingHours.monToFri": "Måndag till fredag",
   "openingHours.sat": "Lördag",
   "openingHours.sun": "Söndag",
+  "openingHours.changing": "Från och med 1:a december har stängt på måndagar.",
 
   "contact.head": "Kontakt",
   "contact.address": "Adress",
