--- a/src/content/l10n/sv/ui.json
+++ b/src/content/l10n/sv/ui.json
@@ -8,9 +8,12 @@
   "lang.en": "Visa sidan på engelska",
 
   "openingHours.head": "Öppettider",
-  "openingHours.monToFri": "Måndag till fredag",
+  "openingHours.closed": "Stängt",
+  "openingHours.mon": "Måndag",
   "openingHours.sat": "Lördag",
   "openingHours.sun": "Söndag",
+  "openingHours.monToFri": "Måndag till fredag",
+  "openingHours.tueToFri": "Tisdag till fredag",
 
   "contact.head": "Kontakt",
   "contact.address": "Adress",
