Add hotpot alt text

--- a/src/content/l10n/en/alt.json
+++ b/src/content/l10n/en/alt.json
@@ -2,5 +2,6 @@
   "map": "The location of the restaurant on Google maps.",
   "hero": "A plate of Pad Thai placed on a table.",
   "food": "A bowl of bibimbap.",
-  "drinks": "A glass of coke."
+  "drinks": "A glass of coke.",
+  "hotpot": "A hotpot with two sections with vegetables, spices, and meat. There are plates and bowls with meat, sauces, and vegetables surrounding the pot."
 }
