--- a/src/content/l10n/sv/alt.json
+++ b/src/content/l10n/sv/alt.json
@@ -2,5 +2,6 @@
   "map": "Restaurangens plats på Google maps.",
   "hero": "En tallrik Pad Thai står på ett bord.",
   "food": "En skål bibimbap.",
-  "drinks": "Ett glass cola."
+  "drinks": "Ett glass cola.",
+  "hotpot": "En hotpot med två sektioner med grönsaker, kryddor och kött. Det står tallrikar och skålar med kött, såser och grönsaker kring grytan."
 }
