Update opening hours

--- a/src/content/l10n/sv/ui.json
+++ b/src/content/l10n/sv/ui.json
@@ -8,7 +8,10 @@
   "lang.en": "Visa sidan på engelska",
 
   "openingHours.head": "Öppettider",
+  "openingHours.closed": "Stängt",
   "openingHours.monToFri": "Måndag till fredag",
+  "openingHours.tueToFri": "Tisdag till fredag",
+  "openingHours.mon": "Måndag",
   "openingHours.sat": "Lördag",
   "openingHours.sun": "Söndag",
 
