--- a/src/content/l10n/en/ui.json
+++ b/src/content/l10n/en/ui.json
@@ -8,7 +8,10 @@
   "lang.en": "Show page in English",
 
   "openingHours.head": "Opening hours",
+  "openingHours.closed": "Closed",
   "openingHours.monToFri": "Monday to Friday",
+  "openingHours.tueToFri": "Tuesday to Friday",
+  "openingHours.mon": "Monday",
   "openingHours.sat": "Saturday",
   "openingHours.sun": "Sunday",
 
@@ -24,7 +27,6 @@
   "time.friday": "Friday",
   "time.saturday": "Saturday",
   "time.sunday": "Sunday",
-
   "time.days": "days",
   "time.hours": "hours",
   "time.minutes": "minutes",
